--- a/_posts/2021-07-23-les-pates.md
+++ b/_posts/2021-07-23-les-pates.md
@@ -5,4 +5,4 @@ tags: article
 ---
 Les pâtes
 
-![image](https://damii-en.github.io/images/.jpg)
+![image](https://damii-en.github.io/images/coquilletes.jpg)
