--- a/_posts/2021-07-23-les-pates.md
+++ b/_posts/2021-07-23-les-pates.md
@@ -6,3 +6,6 @@ tags: article
 Les pâtes
 
 ![image](https://damii-en.github.io/images/coquilletes.jpg)
+voici des coquillettes, des pâtes en forme de petit coude
+![image](https://damii-en.github.io/images/spaghetti.jpg)
+voici des spaghettis, des pâtes très longues et très fines
